--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-ejs": "^2.0.0",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "parse": "^3.5.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
